clusters/dextek/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux
  annotations:
spec:
  hostnames:
    - flux.plexuz.xyz
  parentRefs:
    - name: gateway-internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: flux-operator
          port: 9080
